tests/build/property/cannot_declare_lifetime.stderr
error: property functions cannot declare lifetimes
 --> $DIR/cannot_declare_lifetime.rs:4:16
  |
4 | pub fn invalid<'a>(child: impl UiNode, input: &'a str) -> impl UiNode {
  |                ^^
